--- a/portfolio.html
+++ b/portfolio.html
@@ -269,8 +269,7 @@
             <ul class="list">
               <li class="adress-item">
                 <a
-                  class="footer-link"
-                  class="connection"
+                  class="footer-link connection"
                   href="https://goo.gl/maps/HwD9BETJEKtcqntC8"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -283,7 +282,7 @@
                 >
               </li>
               <li class="adress-item">
-                <a class="footer-link" class="mobile" href="tel:+380961111111"
+                <a class="footer-link mobile" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
