--- a/index.html
+++ b/index.html
@@ -62,17 +62,81 @@
           <button class="hero-link" type="button" data-modal-open>
             Заказать услугу
           </button>
-          <div class="backdrop is-hidden" data-modal>
-            <div class="modal">
-              <button class="modal-button" type="button" data-modal-close>
-                <svg class="modal-svg" width="11" height="11">
-                  <use href="./images/icons.svg#icon-modalclose"></use>
-                </svg>
-              </button>
-            </div>
-          </div>
         </div>
       </section>
+
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button class="modal-button" type="button" data-modal-close>
+            <svg class="modal-svg" width="11" height="11">
+              <use href="./images/icons.svg#icon-modalclose"></use>
+            </svg>
+          </button>
+
+          <form class="form-request" autocomplete="off">
+            <h3 class="request-title">
+              Оставьте свои данные, мы вам перезвоним
+            </h3>
+            <label class="request-field">
+              <input
+                type="text"
+                name="name"
+                class="request-input"
+                placeholder=" "
+              />
+              <span class="request-label">Имя</span>
+              <svg class="request-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modalname"></use>
+              </svg>
+            </label>
+            <label class="request-field">
+              <input
+                type="tel"
+                name="phone"
+                class="request-input"
+                placeholder=" "
+              />
+              <span class="request-label">Телефон</span>
+              <svg class="request-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modalphone"></use>
+              </svg>
+            </label>
+            <label class="request-field">
+              <input
+                type="email"
+                name="email"
+                class="request-input"
+                placeholder=" "
+              />
+              <span class="request-label">Почта</span>
+              <svg class="request-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-modalmail"></use>
+              </svg>
+            </label>
+            <label class="request-comment-field">
+              <textarea
+                name="comment"
+                class="request-comment-input"
+                placeholder=" "
+              ></textarea>
+              <span class="request-comment-label">Комментарий</span>
+            </label>
+            <label class="request-checkbox">
+              <input
+                class="checkbox-input visually-hidden"
+                type="checkbox"
+                name="checkbox"
+              />
+              <span class="check-icon"></span>
+              <span class="checkbox-text">
+                Соглашаюсь с рассылкой и принимаю
+                <a class="conditions-link" href="">Условия договора</a>
+              </span>
+            </label>
+            <button class="request-btn" type="submit">Отправить</button>
+          </form>
+        </div>
+      </div>
 
       <section class="warranty">
         <div class="container">
@@ -368,8 +432,7 @@
             <ul class="list">
               <li class="adress-item">
                 <a
-                  class="footer-link"
-                  class="connection"
+                  class="footer-link connection"
                   href="https://goo.gl/maps/HwD9BETJEKtcqntC8"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -382,7 +445,7 @@
                 >
               </li>
               <li>
-                <a class="footer-link" class="mobile" href="tel:+380961111111"
+                <a class="footer-link mobile" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -421,6 +484,25 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="news-footer">
+          <h3 class="news-title">Подпишитесь на рассылку</h3>
+          <form class="news-form">
+            <input
+              type="email"
+              name="mail"
+              class="news-mail"
+              placeholder="E-mail"
+              autocomplete="off"
+            />
+            <button type="submit" class="news-btn">
+              <span>Подписаться</span>
+              <svg class="news-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
