--- a/index.html
+++ b/index.html
@@ -65,79 +65,6 @@
         </div>
       </section>
 
-      <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-          <button class="modal-button" type="button" data-modal-close>
-            <svg class="modal-svg" width="11" height="11">
-              <use href="./images/icons.svg#icon-modalclose"></use>
-            </svg>
-          </button>
-
-          <form class="form-request" autocomplete="off">
-            <h3 class="request-title">
-              Оставьте свои данные, мы вам перезвоним
-            </h3>
-            <label class="request-field">
-              <input
-                type="text"
-                name="name"
-                class="request-input"
-                placeholder=" "
-              />
-              <span class="request-label">Имя</span>
-              <svg class="request-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-modalname"></use>
-              </svg>
-            </label>
-            <label class="request-field">
-              <input
-                type="tel"
-                name="phone"
-                class="request-input"
-                placeholder=" "
-              />
-              <span class="request-label">Телефон</span>
-              <svg class="request-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-modalphone"></use>
-              </svg>
-            </label>
-            <label class="request-field">
-              <input
-                type="email"
-                name="email"
-                class="request-input"
-                placeholder=" "
-              />
-              <span class="request-label">Почта</span>
-              <svg class="request-icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-modalmail"></use>
-              </svg>
-            </label>
-            <label class="request-comment-field">
-              <textarea
-                name="comment"
-                class="request-comment-input"
-                placeholder=" "
-              ></textarea>
-              <span class="request-comment-label">Комментарий</span>
-            </label>
-            <label class="request-checkbox">
-              <input
-                class="checkbox-input visually-hidden"
-                type="checkbox"
-                name="checkbox"
-              />
-              <span class="check-icon"></span>
-              <span class="checkbox-text">
-                Соглашаюсь с рассылкой и принимаю
-                <a class="conditions-link" href="">Условия договора</a>
-              </span>
-            </label>
-            <button class="request-btn" type="submit">Отправить</button>
-          </form>
-        </div>
-      </div>
-
       <section class="warranty">
         <div class="container">
           <h2 hidden>Наши гарантии</h2>
@@ -506,6 +433,77 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-button" type="button" data-modal-close>
+          <svg class="modal-svg" width="11" height="11">
+            <use href="./images/icons.svg#icon-modalclose"></use>
+          </svg>
+        </button>
+
+        <form class="form-request" autocomplete="off">
+          <h3 class="request-title">Оставьте свои данные, мы вам перезвоним</h3>
+          <label class="request-field">
+            <input
+              type="text"
+              name="name"
+              class="request-input"
+              placeholder=" "
+            />
+            <span class="request-label">Имя</span>
+            <svg class="request-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-modalname"></use>
+            </svg>
+          </label>
+          <label class="request-field">
+            <input
+              type="tel"
+              name="phone"
+              class="request-input"
+              placeholder=" "
+            />
+            <span class="request-label">Телефон</span>
+            <svg class="request-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-modalphone"></use>
+            </svg>
+          </label>
+          <label class="request-field">
+            <input
+              type="email"
+              name="email"
+              class="request-input"
+              placeholder=" "
+            />
+            <span class="request-label">Почта</span>
+            <svg class="request-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-modalmail"></use>
+            </svg>
+          </label>
+          <label class="request-comment-field">
+            <textarea
+              name="comment"
+              class="request-comment-input"
+              placeholder=" "
+            ></textarea>
+            <span class="request-comment-label">Комментарий</span>
+          </label>
+          <label class="request-checkbox">
+            <input
+              class="checkbox-input visually-hidden"
+              type="checkbox"
+              name="checkbox"
+            />
+            <span class="check-icon"></span>
+            <span class="checkbox-text">
+              Соглашаюсь с рассылкой и принимаю
+              <a class="conditions-link" href="">Условия договора</a>
+            </span>
+          </label>
+          <button class="request-btn" type="submit">Отправить</button>
+        </form>
+      </div>
+    </div>
 
     <script src="./js/modal.js"></script>
   </body>
