--- a/portfolio.html
+++ b/portfolio.html
@@ -322,6 +322,24 @@
             </li>
           </ul>
         </div>
+        <div class="news-footer">
+          <h3 class="news-title">Подпишитесь на рассылку</h3>
+          <form class="news-form">
+            <input
+              type="email"
+              name="mail"
+              class="news-mail"
+              placeholder="E-mail"
+              autocomplete="off"
+            />
+            <button type="submit" class="news-btn">
+              <span>Подписаться</span>
+              <svg class="news-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
