--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         </div>
 
         <div class="news-footer">
-          <h3 class="news-title">Подпишитесь на рассылку</h3>
+          <p class="news__text">Подпишитесь на рассылку</p>
           <form class="news-form">
             <input
               type="email"
@@ -443,7 +443,7 @@
         </button>
 
         <form class="form-request" autocomplete="off">
-          <h3 class="request-title">Оставьте свои данные, мы вам перезвоним</h3>
+          <p class="request__text">Оставьте свои данные, мы вам перезвоним</p>
           <label class="request-field">
             <input
               type="text"
@@ -452,7 +452,7 @@
               placeholder=" "
             />
             <span class="request-label">Имя</span>
-            <svg class="request-icon" width="18" height="18">
+            <svg class="request-icon" width="12" height="12">
               <use href="./images/icons.svg#icon-modalname"></use>
             </svg>
           </label>
@@ -464,7 +464,7 @@
               placeholder=" "
             />
             <span class="request-label">Телефон</span>
-            <svg class="request-icon" width="18" height="18">
+            <svg class="request-icon" width="13" height="13">
               <use href="./images/icons.svg#icon-modalphone"></use>
             </svg>
           </label>
@@ -476,7 +476,7 @@
               placeholder=" "
             />
             <span class="request-label">Почта</span>
-            <svg class="request-icon" width="18" height="18">
+            <svg class="request-icon" width="15" height="12">
               <use href="./images/icons.svg#icon-modalmail"></use>
             </svg>
           </label>
