--- a/portfolio.html
+++ b/portfolio.html
@@ -323,7 +323,7 @@
           </ul>
         </div>
         <div class="news-footer">
-          <h3 class="news-title">Подпишитесь на рассылку</h3>
+          <p class="news__text">Подпишитесь на рассылку</p>
           <form class="news-form">
             <input
               type="email"
